...
        <View style={localStyles.qrHeader}>
          <TouchableOpacity onPress={onBack} style={localStyles.backButton}>
            <Icon name="back" size={24} color={COLORS.VERY_LIGHT_GRAY} />
          </TouchableOpacity>
          <View style={localStyles.titleContainer}>
            <Text style={styles.qrModalTitle}>
              {addressType === 'Taproot' || addressType === 'UNIT Address' ? 'UNIT address' : 'Bitcoin address'}
            </Text>
          </View>
        </View>
        <Text style={styles.qrModalSubtitle}>
          {addressType === 'Taproot' || addressType === 'UNIT Address'
            ? 'Only use this address to receive UNIT.'
...
